# ezt-core

./: .gitignore  404.html  CONTRIBUTING.md  README.md  conftest.py  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  docs-build.yml
docs/: index.md
docs/pages/: faq.md
docs/pages/guides/: analyzing_data.md  installation.md  model_creation.md  project_initiation.md  project_structure.md  register_source.md  run_models.md
docs/pages/reference/: cli_ref.md  models.md  sources.md
ezt/: MANIFEST.in  __init__.py  main_cli.py
ezt/include/: __init__.py
ezt/include/macros/: base_macros.sql
ezt/include/starter_project/: .gitignore  ezt_project.yml  sources.yml
ezt/util/: config.py  exceptions.py  fs.py  helpers.py  logger.py  result.py  validator.py
ezt/util/yaml_schemas/: ezt_project_schema.yml  ezt_sources_schema.yml
pages/faq/: index.html
pages/guides/analyzing_data/: index.html
pages/guides/installation/: index.html
pages/guides/model_creation/: index.html
pages/guides/project_initiation/: index.html
pages/guides/project_structure/: index.html
search/: search_index.json
tests/: test_ezt.py
tests/fixtures/: data_fixtures.py  model_fixtures.py  project_fixture.py  yml_fixtures.py
tests/unit/: test_config.py  test_helpers.py  test_logger.py  test_merge.py  test_models.py  test_persist_delta.py  test_process_model.py  test_pymodel_decorator.py  test_result.py  test_runner.py  test_sources.py  test_validator.py
(+8 files in other folders)
