[tool.poetry]
name = "ez-transform"
version = "0.1.1"
description = "Analytics engineering for data lakes."
authors = ["John Kaustinen <jokausti@gmail.com>"]
license = 'Apache-2.0'
documentation = 'https://ez-transform.github.io/ezt-core/'
repository = 'https://github.com/ez-transform/ezt-core'
readme = 'README.md'
packages = [
    {include = "ezt"}
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
click = "^8.0.3"
Jinja2 = "^3.0.3"
PyYAML = "^6.0"
polars = "^0.15.17"
s3fs = "^2022.11.0"
deltalake = "^0.6.2"
graphlib-backport = "^1.0.3"
rich = "^12.2.0"
rich-click = "^1.3.0"
jsonschema = "^4.14.0"
pyarrow = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
dprint = "^0.1.0"
types-PyYAML = "^6.0.7"
coverage = "^6.4.4"
pytest-mock = "^3.8.2"
pytest-timeout = "^2.1.0"
pytest-env = "^0.8.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.8"
mkdocs-click = "^0.8.0"

[tool.pytest.ini_options]
testpaths = [
    'tests'
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ezt = "ezt.main_cli:ezt"